--- a/index.html
+++ b/index.html
@@ -100,6 +100,36 @@
                         <div class="team-list-content">
                             <h4 class="team-title">Игорь Демьяненко</h4>
                             <p class="team-description" lang="en">Prodact Designer</p>
+                            <ul class="social-list list">
+                                <li class="social-list_item">
+                                    <a href="#" class="social-list_item-link social-list_item-link_instagram">
+                                        <svg class="social-list_icon" width="20" height="20"> 
+                                            <use href="./images/icons.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>         
+                                </li>
+                                <li class="social-list_item">
+                                    <a href="#" class="social-list_item-link social-list_item-link_twitter">
+                                       <svg class="social-list_icon" width="20" height="20">
+                                           <use href="./images/icons.svg#icon-twitter"></use>
+                                       </svg>         
+                                    </a>
+                                </li>
+                                <li class="social-list_item">
+                                    <a href="#" class="social-list_item-link social-list_item-link_facebook">
+                                       <svg class="social-list_icon" weight="20" height="20">
+                                           <use href="./images/icons.svg#icon-facebook"></use>
+                                       </svg>     
+                                    </a>
+                                </li>
+                                <li class="social-list_item">
+                                    <a href="#" class="social-list_item-link social-list_item-link_linkedin">
+                                       <svg class="social-list_icon" weght="20" height="20">
+                                           <use href="./images/icons.svg#icon-linkedin"></use>
+                                       </svg> 
+                                    </a>
+                                </li>
+                            </ul>
                         </div> 
                     </li>
                     <li class="team-item">
@@ -107,6 +137,36 @@
                         <div class="team-list-content">
                             <h4 class="team-title">Ольга Репина</h4>
                             <p class="team-description" lang="en">Frontend Developer</p>
+                            <ul class="social-list list">
+                                <li class="social-list_item">
+                                    <a href="#" class="social-list_item-link social-list_item-link_instagram">
+                                        <svg class="social-list_icon" width="20" height="20">
+                                            <use href="./images/icons.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-list_item">
+                                    <a href="#" class="social-list_item-link social-list_item-link_twitter">
+                                        <svg class="social-list_icon" width="20" height="20">
+                                            <use href="./images/icons.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-list_item">
+                                    <a href="#" class="social-list_item-link social-list_item-link_facebook">
+                                        <svg class="social-list_icon" weight="20" height="20">
+                                            <use href="./images/icons.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-list_item">
+                                    <a href="#" class="social-list_item-link social-list_item-link_linkedin">
+                                        <svg class="social-list_icon" weght="20" height="20">
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li class="team-item">
@@ -114,6 +174,36 @@
                         <div class="team-list-content">
                             <h4 class="team-title">Николай Тарасов</h4>
                             <p class="team-description" lang="en">Marketing</p>
+                            <ul class="social-list list">
+                                <li class="social-list_item">
+                                    <a href="#" class="social-list_item-link social-list_item-link_instagram">
+                                        <svg class="social-list_icon" width="20" height="20">
+                                            <use href="./images/icons.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-list_item">
+                                    <a href="#" class="social-list_item-link social-list_item-link_twitter">
+                                        <svg class="social-list_icon" width="20" height="20">
+                                            <use href="./images/icons.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-list_item">
+                                    <a href="#" class="social-list_item-link social-list_item-link_facebook">
+                                        <svg class="social-list_icon" weight="20" height="20">
+                                            <use href="./images/icons.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-list_item">
+                                    <a href="#" class="social-list_item-link social-list_item-link_linkedin">
+                                        <svg class="social-list_icon" weght="20" height="20">
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li class="team-item">
@@ -121,6 +211,36 @@
                         <div class="team-list-content">
                             <h4 class="team-title">Михаил Ермаков</h4>
                             <p class="team-description" lang="en">UI Designer</p>
+                            <ul class="social-list list">
+                                <li class="social-list_item">
+                                    <a href="#" class="social-list_item-link social-list_item-link_instagram">
+                                        <svg class="social-list_icon" width="20" height="20">
+                                            <use href="./images/icons.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-list_item">
+                                    <a href="#" class="social-list_item-link social-list_item-link_twitter">
+                                        <svg class="social-list_icon" width="20" height="20">
+                                            <use href="./images/icons.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-list_item">
+                                    <a href="#" class="social-list_item-link social-list_item-link_facebook">
+                                        <svg class="social-list_icon" weight="20" height="20">
+                                            <use href="./images/icons.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-list_item">
+                                    <a href="#" class="social-list_item-link social-list_item-link_linkedin">
+                                        <svg class="social-list_icon" weght="20" height="20">
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                 </ul>
