--- a/portfolio.html
+++ b/portfolio.html
@@ -34,9 +34,19 @@
             </nav>
             <ul class="contacts-list list">
                 <li class="contact-item">
+                    <a href="#" class="email-link_img link">
+                        <svg class="email_icon" width="16" height="12">
+                            <use href="./images/icons.svg#icon-email"></use>
+                        </svg>
+                    </a>
                     <a class="email-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
                 </li>
                 <li class="contact-item">
+                    <a href="#" class="tel-link_img link">
+                        <svg class="tel_icon" width="10" height="16">
+                            <use href="./images/icons.svg#icon-tel"></use>
+                        </svg>
+                    </a>
                     <a class="tel-link link" href="tel:+380961111111">+38 096 111 11 11</a>
                 </li>
             </ul>
