--- a/portfolio.html
+++ b/portfolio.html
@@ -57,19 +57,29 @@
             <div class="container">
                 <ul class="button-list list">
                     <li class="button-item">
-                        <button class="modal-activbtn" type="button">Все</button>
+                        <a class="activbutton-link" href="">
+                            <button class="modal-activbtn" type="button">Все</button>
+                        </a>
                     </li>
                     <li class="button-item">
-                        <button class="modal-btn" type="button">Веб-сайты</button>
+                        <a class="button-link" href="">
+                            <button class="modal-btn" type="button">Веб-сайты</button>
+                        </a>
                     </li>
                     <li class="button-item">
-                        <button class="modal-btn" type="button">Приложения</button>
+                        <a class="button-link" href="">
+                            <button class="modal-btn" type="button">Приложения</button>
+                        </a>
                     </li>
                     <li class="button-item">
-                        <button class="modal-btn" type="button">Дизайн</button>
+                        <a class="button-link" href="">
+                            <button class="modal-btn" type="button">Дизайн</button>
+                        </a>
                     </li>
-                    <li class="buton-item">
-                        <button class="modal-btn" type="button">Маркетинг</button>
+                    <li class="button-item">
+                        <a class="button-link" href="">
+                            <button class="modal-btn" type="button">Маркетинг</button>
+                        </a>
                     </li>
                 </ul>
             </div>
@@ -79,69 +89,84 @@
             <div class="container">
                 <ul class="portfolio-list list">
                     <li class="portfolio-item">
-                        <a href="" class="portfolio-link">
-                            <img class="portfolio-list-img" src="./images.portfolio/технокряк.jpg" alt="ноутбук с сайтом" width="370" height="255">
-                        </a>
+                        <a class="portfolio-link link" href=""><img class="portfolio-list-img" src="./images.portfolio/технокряк.jpg" alt="ноутбук с сайтом" width="370" height="255">
                         <div class="portfolio-card-content">
                             <h2 class="img-title">Технокряк</h2>
                             <p class="img-description">Веб-сайт</p>
                         </div>
+                        </a>
                     </li>
                     <li class="portfolio-item">
-                        <img class="portfolio-list-img" src="./images.portfolio/постер.jpg" alt="баскетболисты" width="370" height="255">
+                        <a class="portfolio-link link" href="">
+                            <img class="portfolio-list-img" src="./images.portfolio/постер.jpg" alt="баскетболисты" width="370" height="255">
                         <div class="portfolio-card-content">
-                            <h2 class="img-title">Постер<span lang="en">New Orlean vs Golden Star</span></h2>
+                            <h2 class="img-title">Постер<span lang="en"> New Orlean vs Golden Star</span></h2>
                             <p class="img-description">Дизайн</p>
                         </div>
+                        </a>
                     </li>
                     <li class="portfolio-item">
-                        <img class="portfolio-list-img" src="./images.portfolio/Seafood.jpg" alt="логотип ресторана" width="370" height="255">
+                        <a class="portfolio-link link" href="">
+                            <img class="portfolio-list-img" src="./images.portfolio/Seafood.jpg" alt="логотип ресторана" width="370" height="255">
                         <div class="portfolio-card-content">
                             <h2 class="img-title">Ресторан Seafood <span lang="en">Seafood</span></h2>
                             <p class="img-description">Приложение</p>
                         </div>
+                        </a>
                     </li>
                     <li class="portfolio-item">
-                        <img class="portfolio-list-img" src="./images.portfolio/prime.jpg" alt="наушники" width="370" height="255">
+                        <a class="portfolio-link link" href="">
+                            <img class="portfolio-list-img" src="./images.portfolio/prime.jpg" alt="наушники" width="370" height="255">
                         <div class="portfolio-card-content">
                             <h2 class="img-title">Проект<span lang="en">Prime</span></h2>
                             <p class="img-description">Маркетинг</p>
                         </div>
+                        </a>
                     </li>
                     <li class="portfolio-item">
-                        <img class="portfolio-list-img" src="./images.portfolio/boxes.jpg" alt="две коробки" width="370" height="255">
+                        <a class="portfolio-link  link" href="">
+                            <img class="portfolio-list-img" src="./images.portfolio/boxes.jpg" alt="две коробки" width="370" height="255">
                         <div class="portfolio-card-content">
                             <h2 class="img-title">Проект<span lang="en">Boxes</span></h2>
                             <p class="img-description">Приложение</p> 
-                        </div>  
+                        </div>
+                        </a>  
                     </li>
                     <li class="portfolio-item">
-                        <img class="portfolio-list-img" src="./images.portfolio/inspiration.jpg" alt="монитор с темным экраном" width="370" height="255">
+                        <a class="portfolio-link link" href="">
+                            <img class="portfolio-list-img" src="./images.portfolio/inspiration.jpg" alt="монитор с темным экраном" width="370" height="255">
                         <div class="portfolio-card-content">
                             <h2 class="img-title" lang="en">Inspiration has no Borders</h2>
                             <p class="img-description">Веб-сайт</p>
                         </div>
+                        </a>
                     </li>
                     <li class="portfolio-item">
-                        <img class="portfolio-list-img" src="./images.portfolio/издание.jpg" alt="открытая книга" width="370" height="255">
+                        <a class="portfolio-link link" href="">
+                            <img class="portfolio-list-img" src="./images.portfolio/издание.jpg" alt="открытая книга" width="370" height="255">
                         <div class="portfolio-card-content">
                             <h2 class="img-title">Издание<span lang="en">Limited Edition</span></h2>
                             <p class="img-description">Дизайн</p>
                         </div>
+                        </a>
                     </li>
                     <li class="portfolio-item">
-                        <img class="portfolio-list-img" src="./images.portfolio/лаб.jpg" alt="карточка-брелок" width="370" height="255">
+                        <a class="portfolio-link link" href="">
+                            <img class="portfolio-list-img" src="./images.portfolio/лаб.jpg" alt="карточка-брелок" width="370" height="255">
                         <div class="portfolio-card-content">
                             <h2 class="img-title">Проект<span lang="en">LAB</span></h2>
                             <p class="img-description">Маркетинг</p>
                         </div>
+                        </a>
                     </li>
-                    <li class="portfolio-item" >
-                        <img class="portfolio-list-img" src="./images.portfolio/growingbusiness.jpg" alt="человек работает с ноутом" width="370" height="255">
+                    <li class="portfolio-item">
+                        <a class="portfolio-link link" href="">
+                            <img class="portfolio-list-img" src="./images.portfolio/growingbusiness.jpg" alt="человек работает с ноутом" width="370" height="255">
                         <div class="portfolio-card-content">
                             <h2 class="img-title" lang="en">Growing Business</h2>
                             <p class="img-description">Приложение</p>
                         </div>
+                        </a>
                     </li>
                 </ul>
             </div>
