--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                 <h3 class="section-title">Наша команда</h3>
                 <ul class="team-list list">
                     <li class="team-item">
-                        <img class="team-list-img" src="./images/ourteam/igor.jpg" alt="мужчина с бородой" width="270" height="368">
+                        <img class="team-list-img" src="./images/ourteam/igor.jpg" alt="мужчина с бородой" width="270">
                         <div class="team-list-content">
                             <h4 class="team-title">Игорь Демьяненко</h4>
                             <p class="team-description" lang="en">Prodact Designer</p>
@@ -171,7 +171,7 @@
                         </div> 
                     </li>
                     <li class="team-item">
-                        <img class="team-list-img" src="./images/ourteam/olga.jpg" alt="молодая женщина с белыми волосами" width="270" height="368">
+                        <img class="team-list-img" src="./images/ourteam/olga.jpg" alt="молодая женщина с белыми волосами" width="270">
                         <div class="team-list-content">
                             <h4 class="team-title">Ольга Репина</h4>
                             <p class="team-description" lang="en">Frontend Developer</p>
@@ -208,7 +208,7 @@
                         </div>
                     </li>
                     <li class="team-item">
-                        <img class="team-list-img" src="./images/ourteam/nikolay.jpg" alt="молодой мужчина улыбается" width="270" height="368">
+                        <img class="team-list-img" src="./images/ourteam/nikolay.jpg" alt="молодой мужчина улыбается" width="270">
                         <div class="team-list-content">
                             <h4 class="team-title">Николай Тарасов</h4>
                             <p class="team-description" lang="en">Marketing</p>
@@ -245,7 +245,7 @@
                         </div>
                     </li>
                     <li class="team-item">
-                        <img class="team-list-img" src="./images/ourteam/mihail.jpg" alt="молодой мужчина в очках" width="270" height="368">
+                        <img class="team-list-img" src="./images/ourteam/mihail.jpg" alt="молодой мужчина в очках" width="270">
                         <div class="team-list-content">
                             <h4 class="team-title">Михаил Ермаков</h4>
                             <p class="team-description" lang="en">UI Designer</p>
